--- a/app/src/main/res/layout/my_dialog_layout.xml
+++ b/app/src/main/res/layout/my_dialog_layout.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="First Name" />
+        android:hint="First Name"/>
 
     <EditText
         android:id="@+id/fbEditViewLastname"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Last Name" />
+        android:hint="Last Name" />
 
     <Button
         android:id="@+id/fbButton"
